Bug 471307 - Accessing room settings/security changes access from "Space Members" to "Private" automatically.
Summary: Accessing room settings/security changes access from "Space Members" to "Priv...
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-21 20:35 UTC by Aaron
Modified: 2023-11-07 20:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron 2023-06-21 20:35:19 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open a room's settings.
2. Go to the "Security" section
3. Change nothing

OBSERVED RESULT
Access setting set to "Space members" will be changed to "Private".  No indication of this change will be made in Neochat.  The changed setting can be viewed from another client however (such as Element).

EXPECTED RESULT
No change expected

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Fedora 38
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
This was only tested in a room that belongs to a Matrix Space.  I have not confirmed that this happens for rooms not belonging to a Matrix Space.
Comment 1 Bug Janitor Service 2023-11-07 18:26:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1413
Comment 2 James Graham 2023-11-07 20:43:53 UTC
Git commit dbbad2cf132722f385200a77323ad74b18f492b9 by James Graham.
Committed on 07/11/2023 at 21:43.
Pushed by nvrwhere into branch 'master'.

Restricted Room Security

Create the required ux to allow the restricted room security setting to be re-enabled

M  +1    -0    src/CMakeLists.txt
M  +53   -2    src/neochatroom.cpp
M  +35   -1    src/neochatroom.h
M  +32   -10   src/qml/RoomSecurity.qml
A  +77   -0    src/qml/SelectSpacesDialog.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]

https://invent.kde.org/network/neochat/-/commit/dbbad2cf132722f385200a77323ad74b18f492b9