Restricted Room Security

Create the required ux to allow the restricted room security setting to be re-enabled

BUG: 471307