src/neochatroom.h
@@ -161,6 +161,13 @@ class NeoChatRoom : public Quotient::Room
     Q_PROPERTY(QString joinRule READ joinRule WRITE setJoinRule NOTIFY joinRuleChanged)
 
     /**
+     * @brief The space IDs that members of can join this room.
+     *
+     * Empty if the join rule is not restricted.
+     */
+    Q_PROPERTY(QList<QString> restrictedIds READ restrictedIds NOTIFY joinRuleChanged)
+
+    /**
      * @brief Get the maximum room version that the server supports.
      *
      * Only returns main integer room versions (i.e. no msc room versions).
@@ -505,6 +512,17 @@ public:
 
     QList<QString> parentIds() const;
 
+    /**
+     * @brief Get a list of parent space objects for this room.
+     *
+     * Will only return retrun spaces that are know, i.e. the user has joined and
+     * a valid NeoChatRoom is available.
+     *
+     * @param multiLevel whether the function should recursively gather all levels
+     *        of parents
+     */
+    Q_INVOKABLE QList<NeoChatRoom *> parentObjects(bool multiLevel = false) const;
+
     QString canonicalParent() const;
     void setCanonicalParent(const QString &parentId);
 
@@ -559,7 +577,23 @@ public:
     Q_INVOKABLE void clearInvitationNotification();
 
     [[nodiscard]] QString joinRule() const;
-    void setJoinRule(const QString &joinRule);
+
+    /**
+     * @brief Set the join rule for the room.
+     *
+     * Will fail if the user doesn't have the required privileges.
+     *
+     * @param joinRule the join rule [public, knock, invite, private, restricted].
+     * @param allowedSpaces only used when the join rule is restricted. This is a
+     *        list of space Matrix IDs that members of can join without an invite.
+     *        If the rule is restricted and this list is empty it is treated as a join
+     *        rule of private instead.
+     *
+     * @sa https://spec.matrix.org/latest/client-server-api/#mroomjoin_rules
+     */
+    Q_INVOKABLE void setJoinRule(const QString &joinRule, const QList<QString> &allowedSpaces = {});
+
+    QList<QString> restrictedIds() const;
 
     int maxRoomVersion() const;
 
